tauri.log

> system-monitor@0.1.0 tauri /home/ubuntu/system-detection
> tauri dev

     Running BeforeDevCommand (`npm run dev`)
npm warn Unknown env config "verify-deps-before-run". This will stop working in the next major version of npm.
npm warn Unknown env config "_jsr-registry". This will stop working in the next major version of npm.

> system-monitor@0.1.0 dev
> vite


  VITE v5.4.19  ready in 1028 ms

  ➜  Local:   http://localhost:5173/
  ➜  Network: use --host to expose
     Running DevCommand (`cargo  run --no-default-features --color always --`)
        Info Watching /home/ubuntu/system-detection/src-tauri for changes...
[1m[32m    Finished[0m ]8;;https://doc.rust-lang.org/cargo/reference/profiles.html#default-profiles\`dev` profile [unoptimized + debuginfo]]8;;\ target(s) in 0.85s
[1m[32m     Running[0m `target/debug/system-monitor`
6:48:42 AM [vite] page reload src/types/index.ts
6:49:26 AM [vite] hmr update /src/index.css, /src/AppWrapper.tsx, /src/App.css
6:51:49 AM [vite] hmr update /src/components/SystemOverview.tsx, /src/index.css, /src/App.css
        Info File src-tauri/src/monitoring.rs changed. Rebuilding application...
     Running DevCommand (`cargo  run --no-default-features --color always --`)
        Info File src-tauri/src/monitoring.rs changed. Rebuilding application...
     Running DevCommand (`cargo  run --no-default-features --color always --`)
[1m[32m   Compiling[0m system-monitor v0.1.0 (/home/ubuntu/system-detection/src-tauri)
[1m[36m    Building[0m [=======================> ] 456/457: system-monitor(bin)         [K[0m[1m[38;5;9merror[E0063][0m[0m[1m: missing fields `context_switches` and `interrupts` in initializer of `CpuMetrics`[0m
[0m   [0m[0m[1m[38;5;12m--> [0m[0msrc/monitoring.rs:143:27[0m
[0m    [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m143[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m        let cpu_metrics = CpuMetrics {[0m
[0m    [0m[0m[1m[38;5;12m|[0m[0m                           [0m[0m[1m[38;5;9m^^^^^^^^^^[0m[0m [0m[0m[1m[38;5;9mmissing `context_switches` and `interrupts`[0m

[1m[36m    Building[0m [=======================> ] 456/457: system-monitor(bin)         [K[0m[1mFor more information about this error, try `rustc --explain E0063`.[0m
[1m[36m    Building[0m [=======================> ] 456/457: system-monitor(bin)         [K[1m[31merror[0m[1m:[0m could not compile `system-monitor` (bin "system-monitor") due to 1 previous error

** (WebKitWebProcess:74657): ERROR **: 06:54:12.682: WebProcess didn't exit as expected after the UI process connection was closed

** (WebKitWebProcess:74654): ERROR **: 06:54:12.692: WebProcess didn't exit as expected after the UI process connection was closed
        Info File src-tauri/src/monitoring.rs changed. Rebuilding application...
     Running DevCommand (`cargo  run --no-default-features --color always --`)
        Info File src-tauri/src/monitoring.rs changed. Rebuilding application...
     Running DevCommand (`cargo  run --no-default-features --color always --`)
[1m[32m   Compiling[0m system-monitor v0.1.0 (/home/ubuntu/system-detection/src-tauri)
[1m[36m    Building[0m [=======================> ] 456/457: system-monitor(bin)         [K[1m[32m    Finished[0m ]8;;https://doc.rust-lang.org/cargo/reference/profiles.html#default-profiles\`dev` profile [unoptimized + debuginfo]]8;;\ target(s) in 2m 20s
[1m[32m     Running[0m `target/debug/system-monitor`
        Info File src-tauri/src/main.rs changed. Rebuilding application...
     Running DevCommand (`cargo  run --no-default-features --color always --`)
        Info File src-tauri/src/main.rs changed. Rebuilding application...
     Running DevCommand (`cargo  run --no-default-features --color always --`)
